--- a/src/xbuild/SimulationFrame.form
+++ b/src/xbuild/SimulationFrame.form
@@ -2198,14 +2198,16 @@
                                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                                       <Component id="lbProductHarvestedUnit" min="-2" max="-2" attributes="0"/>
                                                   </Group>
-                                                  <Component id="txtHFRST" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
                                                   <Group type="102" alignment="0" attributes="0">
-                                                      <Component id="dpHLAST" min="-2" max="-2" attributes="1"/>
-                                                      <EmptySpace max="-2" attributes="0"/>
+                                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                                          <Component id="dpHFRST" max="32767" attributes="0"/>
+                                                          <Component id="dpHLAST" max="32767" attributes="1"/>
+                                                      </Group>
+                                                      <EmptySpace type="separate" max="-2" attributes="0"/>
                                                       <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                                                   </Group>
                                               </Group>
-                                              <EmptySpace min="0" pref="69" max="32767" attributes="0"/>
+                                              <EmptySpace min="0" pref="57" max="32767" attributes="0"/>
                                           </Group>
                                       </Group>
                                       <EmptySpace max="-2" attributes="0"/>
@@ -2219,8 +2221,8 @@
                                       <Component id="jXRadioGroup15" min="-2" pref="119" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="1" attributes="0">
-                                          <Component id="lbHarvestEarliest" alignment="1" min="-2" max="-2" attributes="0"/>
-                                          <Component id="txtHFRST" alignment="1" min="-2" max="-2" attributes="0"/>
+                                          <Component id="lbHarvestEarliest" min="-2" max="-2" attributes="0"/>
+                                          <Component id="dpHFRST" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="3" attributes="0">
@@ -2283,14 +2285,6 @@
                                 <Property name="text" type="java.lang.String" value="%"/>
                               </Properties>
                             </Component>
-                            <Component class="xbuild.Components.XFormattedTextField" name="txtHFRST">
-                              <Properties>
-                                <Property name="horizontalAlignment" type="int" value="4"/>
-                                <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
-                                  <Format format="#0.00" subtype="-1" type="0"/>
-                                </Property>
-                              </Properties>
-                            </Component>
                             <Component class="xbuild.Components.XFormattedTextField" name="txtHPCNP">
                               <Properties>
                                 <Property name="horizontalAlignment" type="int" value="4"/>
@@ -2315,6 +2309,13 @@
                               <Properties>
                                 <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
                                   <Connection code="Variables.getDateFormatString()" type="code"/>
+                                </Property>
+                              </Properties>
+                            </Component>
+                            <Component class="xbuild.Components.XDatePicker" name="dpHFRST">
+                              <Properties>
+                                <Property name="formats" type="[Ljava.text.DateFormat;" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                                  <Connection code="Variables.getDateFormat()" type="code"/>
                                 </Property>
                               </Properties>
                             </Component>
