--- a/src/xbuild/FertilizerFrame.form
+++ b/src/xbuild/FertilizerFrame.form
@@ -159,12 +159,12 @@
                 <Column editable="false" title="Day" type="java.lang.Object"/>
                 <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Fertilizer&lt;br&gt;Material&lt;/p&gt;&lt;/html&gt;" type="java.lang.Object"/>
                 <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Fertilizer&lt;br&gt;Applications&lt;/p&gt;&lt;/html&gt;" type="java.lang.Object"/>
-                <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Depth&lt;br&gt;cm&lt;/p&gt;&lt;/html&gt;" type="java.lang.Object"/>
-                <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;N&lt;br&gt;kg/ha&lt;/p&gt;&lt;/html&gt;" type="java.lang.Object"/>
-                <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;P&lt;br&gt;kg ha-1&lt;/p&gt;&lt;/html&gt;" type="java.lang.Object"/>
-                <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;K&lt;br&gt;kg/ha&lt;/p&gt;&lt;/html&gt;" type="java.lang.Object"/>
-                <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Ca&lt;br&gt;kg/ha&lt;/p&gt;&lt;/html&gt;" type="java.lang.Object"/>
-                <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Other&lt;br&gt;elements&lt;br&gt;kg ha-1&lt;/p&gt;&lt;/html&gt;" type="java.lang.Object"/>
+                <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Depth&lt;br&gt;cm&lt;/p&gt;&lt;/html&gt;" type="java.lang.Float"/>
+                <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;N&lt;br&gt;kg/ha&lt;/p&gt;&lt;/html&gt;" type="java.lang.Float"/>
+                <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;P&lt;br&gt;kg ha-1&lt;/p&gt;&lt;/html&gt;" type="java.lang.Float"/>
+                <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;K&lt;br&gt;kg/ha&lt;/p&gt;&lt;/html&gt;" type="java.lang.Float"/>
+                <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Ca&lt;br&gt;kg/ha&lt;/p&gt;&lt;/html&gt;" type="java.lang.Float"/>
+                <Column editable="false" title="&lt;html&gt;&lt;p align=&apos;center&apos;&gt;Other&lt;br&gt;elements&lt;br&gt;kg ha-1&lt;/p&gt;&lt;/html&gt;" type="java.lang.Float"/>
                 <Column editable="false" title="&lt;html&gt; &lt;table width=&apos;100%&apos;&gt;&lt;tr&gt;&lt;td align=&apos;center&apos;&gt; Other&lt;br&gt;Element&lt;br&gt;Code&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt; &lt;/html&gt;" type="java.lang.Object"/>
               </Table>
             </Property>
