--- a/src/xbuild/SoilAnalysisFrame.form
+++ b/src/xbuild/SoilAnalysisFrame.form
@@ -53,13 +53,6 @@
               </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
-          <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
-              <Group type="102" attributes="0">
-                  <EmptySpace min="0" pref="365" max="32767" attributes="0"/>
-                  <Component id="lblLevel1" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="0" pref="365" max="32767" attributes="0"/>
-              </Group>
-          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -88,13 +81,6 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jXPanel2" min="-2" pref="359" max="-2" attributes="0"/>
               <EmptySpace pref="41" max="32767" attributes="0"/>
-          </Group>
-          <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
-              <Group type="102" attributes="0">
-                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                  <Component id="lblLevel1" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-              </Group>
           </Group>
       </Group>
     </DimensionLayout>
@@ -209,7 +195,7 @@
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="Soil Analysis Layers">
+            <TitledBorder>
               <Font PropertyName="font" name="Tahoma" size="11" style="1"/>
             </TitledBorder>
           </Border>
@@ -232,7 +218,7 @@
                       </Group>
                       <Component id="jScrollPane1" min="-2" pref="731" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="8" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -333,14 +319,6 @@
       <Properties>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection code="Variables.getDateFormatString()" type="code"/>
-        </Property>
-      </Properties>
-    </Component>
-    <Component class="org.jdesktop.swingx.JXLabel" name="lblLevel1">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Initial Conditions"/>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Segoe UI" size="18" style="1"/>
         </Property>
       </Properties>
     </Component>
